--- a/src/styles/info-select.less
+++ b/src/styles/info-select.less
@@ -1,5 +1,10 @@
 .info-select{
+    > table{
+        border-collapse: collapse;
+        border-spacing: 0;
+    }
     .info-container {
+        width: 32px;
         .info-button {
             .content {
                 display: none;
