--- a/src/views/templates/info_select.html
+++ b/src/views/templates/info_select.html
@@ -1,11 +1,15 @@
-<span class="select-container">
-    <select class="info-select-select"></select>
-</span >
-<span class="info-container">
-    <a href="javascript:{}" class="info-button">info
-        <div class="content">
-            <ul class="info-select-info-list">
-            </ul>
-        </div>
-    </a>
-</span>
+<table>
+    <tr>
+        <td class="select-container">
+            <select class="info-select-select"></select>
+        </td>
+        <td class="info-container">
+            <a href="javascript:{}" class="info-button">info
+                <div class="content">
+                    <ul class="info-select-info-list">
+                    </ul>
+                </div>
+            </a>
+        </td>
+    </tr>
+</table>
