--- a/src/views/templates/info_select.html
+++ b/src/views/templates/info_select.html
@@ -1,15 +1,19 @@
-<table>
-    <tr>
-        <td class="select-container">
-            <select class="info-select-select"></select>
-        </td>
-        <td class="info-container">
-            <a href="javascript:{}" class="info-button">info
-                <div class="content">
-                    <ul class="info-select-info-list">
-                    </ul>
-                </div>
-            </a>
-        </td>
-    </tr>
-</table>
+<div class="inner">
+    <div class="table">
+        <div class="row">
+            <div class="cell select-container">
+                <select class="info-select-select"></select>
+            </div>
+
+            <div class="cell info-container">
+                <a href="javascript:{}" class="info-button">info
+                    <div class="content">
+                        <ul class="info-select-info-list">
+                        </ul>
+                    </div>
+                </a>
+            </div>
+
+        </div>
+    </div>
+</div>
